syntax = "proto3";

package infraboard.keyauth.token;
option go_package = "github.com/infraboard/keyauth/pkg/token";

import "pkg/token/pb/token.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";

message DescribeTokenRequest {
    string access_token = 1;
    string refresh_token = 2;
}

message ValidateTokenRequest {
    string namespace_id = 1;
    string endpoint_id = 2;
    string access_token = 3;
    string refresh_token = 4;
}

message IssueTokenRequest {
    string client_id = 1;
    string client_secret =2;
    string verify_code = 3;
    string username = 4;
    string password = 5;
    string refresh_token = 6;
    string access_token = 7;
    string auth_code = 8;
    string state = 9;
    GrantType grant_type = 10;
    TokenType type = 11;
    int64 access_expired_at = 15;
    string description = 16;
    string scope = 12;
    string user_agent = 13;
    string remote_ip = 14;
}

message RevolkTokenRequest {
    string client_id = 1;
    string client_secret =2;
    bool logout_session =3;
    string access_token = 4;
    string refresh_token = 5;
}

message QueryTokenRequest { 
    page.PageRequest page = 1 ;
    string application_id = 2;
    string account = 4;
    GrantType grant_type = 3;
}

message BlockTokenRequest {
    string access_token = 1;
    string block_reason = 2;
    BlockType block_type = 3;
}

message ChangeNamespaceRequest {
    // @gotags: json:"namespace" validate:"required"
    string namespace = 1;
    // @gotags: json:"token" validate:"required"
    string token = 2;
}

message DeleteTokenRequest { 
    repeated string access_token = 1;
    string domain = 2;
    string account = 3;
}

message DeleteTokenResponse {
    string message = 1;
    repeated string success = 2;
    repeated string failed = 3;
}

   